; ModuleID = '/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_isvalid.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_isvalid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utf8_data = type { i32 }

@UTF8_MORE = common dso_local global i32 0, align 4
@UTF8_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8_isvalid(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.utf8_data, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i8, i8* %7, i64 %10
  store i8* %11, i8** %5, align 8
  br label %12

12:                                               ; preds = %55, %42, %1
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = icmp ult i8* %13, %14
  br i1 %15, label %16, label %58

16:                                               ; preds = %12
  %17 = load i8*, i8** %3, align 8
  %18 = load i8, i8* %17, align 1
  %19 = call i32 @utf8_open(%struct.utf8_data* %4, i8 signext %18)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* @UTF8_MORE, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %44

22:                                               ; preds = %16
  br label %23

23:                                               ; preds = %34, %22
  %24 = load i8*, i8** %3, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %3, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = icmp ult i8* %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %23
  %29 = load i32, i32* %6, align 4
  %30 = load i32, i32* @UTF8_MORE, align 4
  %31 = icmp eq i32 %29, %30
  br label %32

32:                                               ; preds = %28, %23
  %33 = phi i1 [ false, %23 ], [ %31, %28 ]
  br i1 %33, label %34, label %38

34:                                               ; preds = %32
  %35 = load i8*, i8** %3, align 8
  %36 = load i8, i8* %35, align 1
  %37 = call i32 @utf8_append(%struct.utf8_data* %4, i8 signext %36)
  store i32 %37, i32* %6, align 4
  br label %23

38:                                               ; preds = %32
  %39 = load i32, i32* %6, align 4
  %40 = load i32, i32* @UTF8_DONE, align 4
  %41 = icmp eq i32 %39, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %38
  br label %12

43:                                               ; preds = %38
  store i32 0, i32* %2, align 4
  br label %59

44:                                               ; preds = %16
  %45 = load i8*, i8** %3, align 8
  %46 = load i8, i8* %45, align 1
  %47 = sext i8 %46 to i32
  %48 = icmp slt i32 %47, 32
  br i1 %48, label %54, label %49

49:                                               ; preds = %44
  %50 = load i8*, i8** %3, align 8
  %51 = load i8, i8* %50, align 1
  %52 = sext i8 %51 to i32
  %53 = icmp sgt i32 %52, 126
  br i1 %53, label %54, label %55

54:                                               ; preds = %49, %44
  store i32 0, i32* %2, align 4
  br label %59

55:                                               ; preds = %49
  %56 = load i8*, i8** %3, align 8
  %57 = getelementptr inbounds i8, i8* %56, i32 1
  store i8* %57, i8** %3, align 8
  br label %12

58:                                               ; preds = %12
  store i32 1, i32* %2, align 4
  br label %59

59:                                               ; preds = %58, %54, %43
  %60 = load i32, i32* %2, align 4
  ret i32 %60
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @utf8_open(%struct.utf8_data*, i8 signext) #1

declare dso_local i32 @utf8_append(%struct.utf8_data*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
